force-app/main/default/objects/Ministry_Group_Registration__c/Ministry_Group_Registration__c.object-meta.xml
<CustomObject>
    <description>Holds individual Event Attendees to calculate totals to the Master Record Group Name</description>
    <label>Ministry Group Registration</label>
    <nameField>
        <label>Group Roster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ministry Group Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>