force-app/main/default/objects/Ministry_Group_Registration__c/fields/Account_Household__c.field-meta.xml
<CustomField>
    <fullName>Account_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account / Household</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Household Account, Former Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ministry Group Registrations</relationshipLabel>
    <relationshipName>Group_Rosters</relationshipName>
    <type>Lookup</type>
</CustomField>