force-app/main/default/objects/Ministry_Group_Registration__c/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>