force-app/main/default/objects/Ministry_Group_Registration__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <label>Attendee Email</label>
    <type>Email</type>
</CustomField>