force-app/main/default/objects/Ministry_Group_Registration__c/fields/Attendee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_First_Name__c</fullName>
    <label>Attendee First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>