force-app/main/default/objects/Ministry_Group_Registration__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula>Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee</label>
    <type>Text</type>
</CustomField>