force-app/main/default/objects/Ministry_Group_Registration__c/fields/Attendee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Phone__c</fullName>
    <label>Attendee Phone</label>
    <type>Phone</type>
</CustomField>