force-app/main/default/objects/Ministry_Group_Registration__c/fields/Church_City__c.field-meta.xml
<CustomField>
    <fullName>Church_City__c</fullName>
    <label>Church City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>