force-app/main/default/objects/Ministry_Group_Registration__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <description>Transaction document number</description>
    <label>Confirmation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>