force-app/main/default/objects/Ministry_Group_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact associated with this registration</description>
    <inlineHelpText>Look up the Contact for this registration</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Group_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>