force-app/main/default/objects/Ministry_Group_Registration__c/fields/CV_Attendee_Number__c.field-meta.xml
<CustomField>
    <fullName>CV_Attendee_Number__c</fullName>
    <label>CV Attendee Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>