force-app/main/default/objects/Ministry_Group_Registration__c/fields/CV_is_Guest__c.field-meta.xml
<CustomField>
    <fullName>CV_is_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV is Guest</label>
    <type>Checkbox</type>
</CustomField>