force-app/main/default/objects/Ministry_Group_Registration__c/fields/CV_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>CV_Registration_ID__c</fullName>
    <label>CV Registration ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>