force-app/main/default/objects/Ministry_Group_Registration__c/fields/CV_Revision__c.field-meta.xml
<CustomField>
    <fullName>CV_Revision__c</fullName>
    <label>CV Revision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>