force-app/main/default/objects/Ministry_Group_Registration__c/fields/DD_SE_Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>DD_SE_Individual_ID__c</fullName>
    <externalId>true</externalId>
    <label>DD/SE Individual ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>