force-app/main/default/objects/Ministry_Group_Registration__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <formula>IF( TEXT(Status__c) = &apos;Redeemed&apos;, &apos;You have already redeemed this registration&apos;,
IF( OR(CV_Paid__c = 0,  Qty_Eligible__c = 0),&quot;This was a free registration and thus not eligible&quot;,
&quot;This is an eligible registration&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility</label>
    <type>Text</type>
</CustomField>