force-app/main/default/objects/Ministry_Group_Registration__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADJ</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>AOM</fullName>
            </value>
            <value>
                <fullName>BFE</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CRU</fullName>
            </value>
            <value>
                <fullName>DLE</fullName>
            </value>
            <value>
                <fullName>FCE</fullName>
            </value>
            <value>
                <fullName>FLS</fullName>
            </value>
            <value>
                <fullName>FLW</fullName>
            </value>
            <value>
                <fullName>ISD</fullName>
            </value>
            <value>
                <fullName>LTR</fullName>
            </value>
            <value>
                <fullName>MMW</fullName>
            </value>
            <value>
                <fullName>MPR</fullName>
            </value>
            <value>
                <fullName>NFE</fullName>
            </value>
            <value>
                <fullName>REV</fullName>
            </value>
            <value>
                <fullName>SPK</fullName>
            </value>
            <value>
                <fullName>STO</fullName>
            </value>
            <value>
                <fullName>WLE</fullName>
            </value>
            <value>
                <fullName>WTR</fullName>
            </value>
            <value>
                <fullName>WTRCANCEL</fullName>
            </value>
            <value>
                <fullName>YCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>