force-app/main/default/objects/Ministry_Group_Registration__c/fields/Filled_with_Holy_Spirit__c.field-meta.xml
<CustomField>
    <fullName>Filled_with_Holy_Spirit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked Filled with Holy Spirit on Eval.</description>
    <inlineHelpText>Did they check &quot;Holy Spirit&quot; on their Evaluation Form?</inlineHelpText>
    <label>Filled with Holy Spirit</label>
    <type>Checkbox</type>
</CustomField>