force-app/main/default/objects/Ministry_Group_Registration__c/fields/FY_Registrations__c.field-meta.xml
<CustomField>
    <fullName>FY_Registrations__c</fullName>
    <formula>IF(YEAR(Registration_Date__c) = YEAR(TODAY()),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY Registrations</label>
    <type>Checkbox</type>
</CustomField>