force-app/main/default/objects/Ministry_Group_Registration__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>15</length>
    <type>Text</type>
</CustomField>