force-app/main/default/objects/Ministry_Group_Registration__c/fields/Gift_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Gift_Certificate_Number__c</fullName>
    <label>Gift Certificate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>