force-app/main/default/objects/Ministry_Group_Registration__c/fields/Group_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_End_Date__c</fullName>
    <formula>Ministry_Group__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group End Date</label>
    <type>Date</type>
</CustomField>