force-app/main/default/objects/Ministry_Group_Registration__c/fields/Group_Name_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Group_Name_Submitted__c</fullName>
    <label>Group Name Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>