force-app/main/default/objects/Ministry_Group_Registration__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host</label>
    <type>Checkbox</type>
</CustomField>