force-app/main/default/objects/Ministry_Group_Registration__c/fields/Houshold_Name__c.field-meta.xml
<CustomField>
    <fullName>Houshold_Name__c</fullName>
    <formula>Account_Household__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Houshold Name</label>
    <type>Text</type>
</CustomField>