force-app/main/default/objects/Ministry_Group_Registration__c/fields/Lead_Small_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Small_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Small Group</label>
    <type>Checkbox</type>
</CustomField>