force-app/main/default/objects/Ministry_Group_Registration__c/fields/migration_Id__c.field-meta.xml
<CustomField>
    <fullName>migration_Id__c</fullName>
    <label>_migration_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>