force-app/main/default/objects/Ministry_Group_Registration__c/fields/Ministry_Group__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Group__c</fullName>
    <label>Ministry Group</label>
    <referenceTo>Ministry_Group__c</referenceTo>
    <relationshipLabel>Ministry Group Registrations</relationshipLabel>
    <relationshipName>Group_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>