force-app/main/default/objects/Ministry_Group_Registration__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>