force-app/main/default/objects/Ministry_Group_Registration__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Price Paid for Event</description>
    <inlineHelpText>Price Paid for Event</inlineHelpText>
    <label>Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>