force-app/main/default/objects/Ministry_Group_Registration__c/fields/Price_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_Code__c</fullName>
    <label>Price Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>