force-app/main/default/objects/Ministry_Group_Registration__c/fields/Primary_Registrant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Registrant__c</fullName>
    <label>Primary Registrant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>