force-app/main/default/objects/Ministry_Group_Registration__c/fields/Qty_All__c.field-meta.xml
<CustomField>
    <fullName>Qty_All__c</fullName>
    <formula>Qty_Eligible__c + Qty_Ineligible__c + Qty_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>