force-app/main/default/objects/Ministry_Group_Registration__c/fields/Qty_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Qty_Eligible__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Eligible</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>