force-app/main/default/objects/Ministry_Group_Registration__c/fields/Qty_Ineligible__c.field-meta.xml
<CustomField>
    <fullName>Qty_Ineligible__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Ineligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>