force-app/main/default/objects/Ministry_Group_Registration__c/fields/Qty_Used__c.field-meta.xml
<CustomField>
    <fullName>Qty_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>