force-app/main/default/objects/Ministry_Group_Registration__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Qty of registrations, typically 1</description>
    <inlineHelpText>Qty of registrations, typically 1</inlineHelpText>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>