force-app/main/default/objects/Ministry_Group_Registration__c/fields/Recommit__c.field-meta.xml
<CustomField>
    <fullName>Recommit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommit</label>
    <type>Checkbox</type>
</CustomField>