force-app/main/default/objects/Ministry_Group_Registration__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Date of registration</description>
    <inlineHelpText>Date of Registration</inlineHelpText>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>