force-app/main/default/objects/Ministry_Group_Registration__c/fields/Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID__c</fullName>
    <label>Registration ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>