force-app/main/default/objects/Ministry_Group_Registration__c/fields/Registration_Insert_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Insert_Date__c</fullName>
    <label>Registration Insert Date</label>
    <type>Date</type>
</CustomField>