force-app/main/default/objects/Ministry_Group_Registration__c/fields/Registration_Month__c.field-meta.xml
<CustomField>
    <fullName>Registration_Month__c</fullName>
    <formula>MONTH(Registration_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>