force-app/main/default/objects/Ministry_Group_Registration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C - Confirmed</fullName>
            </value>
            <value>
                <fullName>X - Cancelled</fullName>
            </value>
            <value>
                <fullName>A - Attended</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N - NoShow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>