force-app/main/default/objects/Ministry_Group_Registration__c/fields/Registration_Year__c.field-meta.xml
<CustomField>
    <fullName>Registration_Year__c</fullName>
    <formula>TEXT(YEAR( Registration_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Year</label>
    <type>Text</type>
</CustomField>