force-app/main/default/objects/Ministry_Group_Registration__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>