force-app/main/default/objects/Ministry_Group_Registration__c/fields/StateList__c.field-meta.xml
<CustomField>
    <fullName>StateList__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_Sates</valueSetName>
    </valueSet>
</CustomField>