force-app/main/default/objects/Ministry_Group_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Redeemed</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
                <isActive>false</isActive>
                <label>Type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>