force-app/main/default/objects/Ministry_Group_Registration__c/fields/Transferred_From__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From__c</fullName>
    <label>Transferred From</label>
    <length>18</length>
    <type>Text</type>
</CustomField>