force-app/main/default/objects/Ministry_Group_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Registration_Status__c</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Qty_Eligible__c</columns>
    <columns>Qty_Ineligible__c</columns>
    <columns>Qty_Used__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Primary_Registrant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>