force-app/main/default/objects/Ministry_Group_Registration__c/listViews/Error_Registrations.listView-meta.xml
<ListView>
    <fullName>Error_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Account_Household__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Event__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Registration_Status__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Registration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ministry_Group__c</field>
        <operation>startsWith</operation>
        <value>Invalid</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>oak</value>
    </filters>
    <filters>
        <field>Account_Household__c</field>
        <operation>contains</operation>
        <value>vidjecan</value>
    </filters>
    <label>Error Registrations</label>
</ListView>