force-app/main/default/objects/Ministry_Group_Registration__c/listViews/From_Cvent.listView-meta.xml
<ListView>
    <fullName>From_Cvent</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Qty_Eligible__c</columns>
    <columns>Qty_Ineligible__c</columns>
    <columns>Qty_Used__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Registration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>FamilyLife,TIm Jones</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <filters>
        <field>Event_Type__c</field>
        <operation>notEqual</operation>
        <value>ADJ,REV</value>
    </filters>
    <label>From Cvent</label>
</ListView>