force-app/main/default/objects/Ministry_Group_Registration__c/listViews/GC_MOBILE.listView-meta.xml
<ListView>
    <fullName>GC_MOBILE</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Registration_Status__c</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Event_Code__c</columns>
    <columns>Notes__c</columns>
    <columns>Recommit__c</columns>
    <columns>Salvation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>6/7/2023 12:00 AM</value>
    </filters>
    <label>GC MOBILE</label>
</ListView>