force-app/main/default/objects/Ministry_Group_Registration__c/listViews/Group_Reactivate.listView-meta.xml
<ListView>
    <fullName>Group_Reactivate</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Group_End_Date__c</columns>
    <columns>SE_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>FamilyLife,TIm Jones</value>
    </filters>
    <filters>
        <field>Event_Type__c</field>
        <operation>notEqual</operation>
        <value>ADJ,REV</value>
    </filters>
    <label>Group Reactivate</label>
</ListView>