force-app/main/default/objects/Ministry_Group_Registration__c/listViews/LLYMI_24.listView-meta.xml
<ListView>
    <fullName>LLYMI_24</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Qty_Eligible__c</columns>
    <columns>Qty_Ineligible__c</columns>
    <columns>Qty_Used__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>notEqual</operation>
        <value>ADJ</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>2024 Love Like You Mean It Cruise</value>
    </filters>
    <label>LLYMI 24</label>
</ListView>