force-app/main/default/objects/Ministry_Group_Registration__c/listViews/Migration_Adjustments.listView-meta.xml
<ListView>
    <fullName>Migration_Adjustments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Qty_Eligible__c</columns>
    <columns>Qty_Ineligible__c</columns>
    <columns>Qty_Used__c</columns>
    <columns>Event_Code__c</columns>
    <columns>Event__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>ADJ</value>
    </filters>
    <label>Migration Adjustments</label>
</ListView>