force-app/main/default/objects/Ministry_Group_Registration__c/listViews/Pastor_Registration_Type_with_MG.listView-meta.xml
<ListView>
    <fullName>Pastor_Registration_Type_with_MG</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>Ministry_Group__c</columns>
    <columns>Group_Name_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CV_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Qty_Eligible__c</columns>
    <columns>Qty_Ineligible__c</columns>
    <columns>Qty_Used__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Registration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>FamilyLife,TIm Jones</value>
    </filters>
    <filters>
        <field>Event_Type__c</field>
        <operation>notEqual</operation>
        <value>ADJ,REV</value>
    </filters>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Pastor</value>
    </filters>
    <label>Pastor Registration Type with MG</label>
</ListView>